@@ -1,9 +1,14 @@
 package dev.erst.fingrind.contract.protocol;
 
 import dev.erst.fingrind.contract.internal.ContractDescriptorValidation;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.EnumSet;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 
 /** Protocol-owned per-target bundle layout facts shared by build and operator surfaces. */
@@ -20,11 +25,33 @@ record BundleLayoutContract(Map<PublicCliBundleTarget, BundleTarget> bundleTarge
       throw new IllegalArgumentException(
           "bundleTargets must cover every public CLI bundle target: " + missingTargets);
     }
-    bundleTargets = Map.copyOf(bundleTargets);
+    bundleTargets = Collections.unmodifiableMap(new LinkedHashMap<>(bundleTargets));
   }
 
   BundleTarget bundleTarget(PublicCliBundleTarget target) {
     return requireBundleTarget(bundleTargets, target);
+  }
+
+  List<PublicCliBundleTarget> supportedPublicCliBundleTargets() {
+    List<PublicCliBundleTarget> supportedTargets = new ArrayList<>();
+    for (PublicCliBundleTarget target : PublicCliBundleTarget.values()) {
+      if (bundleTarget(target).publicBundlePublication().status()
+          == PublicBundlePublicationStatus.PUBLISHED) {
+        supportedTargets.add(target);
+      }
+    }
+    return List.copyOf(supportedTargets);
+  }
+
+  List<PublicCliBundleTarget> unsupportedPublicCliBundleTargets() {
+    List<PublicCliBundleTarget> unsupportedTargets = new ArrayList<>();
+    for (PublicCliBundleTarget target : PublicCliBundleTarget.values()) {
+      if (bundleTarget(target).publicBundlePublication().status()
+          != PublicBundlePublicationStatus.PUBLISHED) {
+        unsupportedTargets.add(target);
+      }
+    }
+    return List.copyOf(unsupportedTargets);
   }
 
   /** One canonical self-contained bundle layout descriptor. */
@@ -34,7 +61,11 @@ record BundleLayoutContract(Map<PublicCliBundleTarget, BundleTarget> bundleTarge
       String archiveFormat,
       String launcherPath,
       String launcherCommand,
-      String sqliteLibraryFileName) {
+      String sqliteLibraryFileName,
+      String compatibilityLabel,
+      Optional<String> minimumGlibcVersion,
+      Optional<String> compatibilitySmokeContainerImage,
+      PublicBundlePublication publicBundlePublication) {
     BundleTarget {
       operatingSystemId =
           ContractDescriptorValidation.requireText(operatingSystemId, "operatingSystemId");
@@ -45,6 +76,59 @@ record BundleLayoutContract(Map<PublicCliBundleTarget, BundleTarget> bundleTarge
           ContractDescriptorValidation.requireText(launcherCommand, "launcherCommand");
       sqliteLibraryFileName =
           ContractDescriptorValidation.requireText(sqliteLibraryFileName, "sqliteLibraryFileName");
+      compatibilityLabel =
+          ContractDescriptorValidation.requireText(compatibilityLabel, "compatibilityLabel");
+      minimumGlibcVersion =
+          Optional.ofNullable(
+              ContractDescriptorValidation.requireOptionalText(
+                  Objects.requireNonNull(minimumGlibcVersion, "minimumGlibcVersion").orElse(null),
+                  "minimumGlibcVersion"));
+      compatibilitySmokeContainerImage =
+          Optional.ofNullable(
+              ContractDescriptorValidation.requireOptionalText(
+                  Objects.requireNonNull(
+                          compatibilitySmokeContainerImage, "compatibilitySmokeContainerImage")
+                      .orElse(null),
+                  "compatibilitySmokeContainerImage"));
+      PublicBundlePublication normalizedPublicBundlePublication =
+          Objects.requireNonNull(publicBundlePublication, "publicBundlePublication");
+      publicBundlePublication = normalizedPublicBundlePublication;
+      if ("linux".equals(operatingSystemId) && minimumGlibcVersion.isEmpty()) {
+        throw new IllegalArgumentException(
+            "minimumGlibcVersion must be present for linux bundle targets.");
+      }
+      if ("linux".equals(operatingSystemId) && compatibilitySmokeContainerImage.isEmpty()) {
+        throw new IllegalArgumentException(
+            "compatibilitySmokeContainerImage must be present for linux bundle targets.");
+      }
+      if (!"linux".equals(operatingSystemId) && minimumGlibcVersion.isPresent()) {
+        throw new IllegalArgumentException(
+            "minimumGlibcVersion must be absent for non-linux bundle targets.");
+      }
+      if (!"linux".equals(operatingSystemId) && compatibilitySmokeContainerImage.isPresent()) {
+        throw new IllegalArgumentException(
+            "compatibilitySmokeContainerImage must be absent for non-linux bundle targets.");
+      }
+    }
+  }
+
+  /** Per-target public-publication facts rooted in the canonical bundle-target registry. */
+  record PublicBundlePublication(
+      PublicBundlePublicationStatus status, Optional<String> runnerLabel) {
+    PublicBundlePublication {
+      PublicBundlePublicationStatus normalizedStatus = Objects.requireNonNull(status, "status");
+      status = normalizedStatus;
+      runnerLabel =
+          Optional.ofNullable(
+              ContractDescriptorValidation.requireOptionalText(
+                  Objects.requireNonNull(runnerLabel, "runnerLabel").orElse(null), "runnerLabel"));
+      if (status == PublicBundlePublicationStatus.PUBLISHED) {
+        if (runnerLabel.isEmpty()) {
+          throw new IllegalArgumentException("published bundle targets must declare runnerLabel.");
+        }
+      } else if (runnerLabel.isPresent()) {
+        throw new IllegalArgumentException("non-published bundle targets must omit runnerLabel.");
+      }
     }
   }
 
